--- a/templates/default_new_meeting_email_template.html
+++ b/templates/default_new_meeting_email_template.html
@@ -1,66 +1,136 @@
 <p>Hi {field:first_name}<br>Thank you for submitting the online meeting update.<br>We will usually be able action your
     request within 48 hours.<br>Our process also updates NA websites around Australia and at NA World Services.<br>
     ------------------------</p>
+<table class="blueTable" style="border: 1px solid #1C6EA4;background-color: #EEEEEE;text-align: left;border-collapse: collapse;">
+    <thead style="background: #1C6EA4;border-bottom: 2px solid #444444;">
+        <tr>
+            <th style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 14px;font-weight: bold;color: #FFFFFF;border-left: none;">
+                <br>Field Name
+            </th>
+            <th style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 14px;font-weight: bold;color: #FFFFFF;border-left: 2px solid #D0E4F5;">
+                <br>Value
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">First Name</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:first_name}</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Last Name</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:last_name}</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Email Address</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:email_address}</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Contact Number (Confidential)</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:contact_number_confidential}
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Additional Info</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
+                {field:additional_info}
+            </td>
+        </tr>
+    </tbody>
+</table>
+
 <p>UPDATED FIELDS</p>
 <table class="blueTable" style="border: 1px solid #1C6EA4;background-color: #EEEEEE;text-align: left;border-collapse: collapse;">
     <thead style="background: #1C6EA4;border-bottom: 2px solid #444444;">
         <tr>
             <th style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 14px;font-weight: bold;color: #FFFFFF;border-left: none;">
-                <br>Field Name</th>
+                <br>Field Name
+            </th>
             <th style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 14px;font-weight: bold;color: #FFFFFF;border-left: 2px solid #D0E4F5;">
-                <br>Original Value</th>
+                <br>Original Value
+            </th>
             <th style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 14px;font-weight: bold;color: #FFFFFF;border-left: 2px solid #D0E4F5;">
-                <br>Updated</th>
+                <br>Updated
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Group Name</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_meeting_name}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_meeting_name}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_meeting_name}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:meeting_name}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Start Time</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_start_time}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_start_time}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_start_time}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:start_time}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Duration</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_duration_time}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_duration_time}</b></td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Time Zone</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_time_zone}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_time_zone}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_duration_time}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:duration_time}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Formats</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_formats}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_formats}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_formats}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:formats}</td>
         </tr>
-        
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Text</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_text}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_text}</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Street</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_street}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_street}</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Info</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_info}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_info}
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Municipality</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_municipality}
+            </td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_municipality}
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Province</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_province}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:location_province}
+            </td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Location Postal Code</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_location_postal_code_1}
+            </td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">
+                {field:location_postal_code_1}
+            </td>
+        </tr>
+
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Weekdays</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_weekday}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_weekday}</b></td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_weekday}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:weekday}</td>
         </tr>
         <tr>
             <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Meeting Link</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_virtual_meeting_link}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_virtual_meeting_link}</b></td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">Additional Info</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_virtual_meeting_additional_info}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_virtual_meeting_additional_info}</b></td>
-        </tr>
-        <tr>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">BMLT Comments</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:hidden_orig_comments}</td>
-            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;"><b>{field:hidden_new_comments}</b>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_virtual_meeting_link}
+            </td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:virtual_meeting_link}
             </td>
         </tr>
-    
+        <!-- <tr>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">BMLT Comments</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:orig_comments}</td>
+            <td style="border: 1px solid #AAAAAA;padding: 3px 2px;font-size: 13px;">{field:comments}
+            </td>
+        </tr> -->
+
     </tbody>
 </table>
