--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -612,7 +612,7 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-
 .select2-container--wbw_select2_theme.select2-container--disabled .select2-selection__choice__remove {
   display: none;
 }
-/*
+/* here */
 .select2-container--wbw_select2_theme.select2-container--open.select2-container--above .select2-selection--single,
 .select2-container--wbw_select2_theme.select2-container--open.select2-container--above .select2-selection--multiple {
   border-top-left-radius: 0;
@@ -693,4 +693,4 @@ span.select2-container--wbw_select2_theme .select2-search--inline .select2-searc
   cursor: default;
   display: block;
   padding: 6px;
-} */
+} 
