--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -496,7 +496,7 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
   border-color: transparent transparent #888 transparent;
   border-width: 0 4px 5px 4px;
 }
-
+/*
 span.select2-container--wbw_select2_theme .select2-selection--multiple {
   background-color: #fff;
   border-radius: 8px;
@@ -775,7 +775,7 @@ span.select2-container--wbw_select2_theme .select2-search--inline .select2-searc
 	border-color: transparent transparent #888 transparent;
 	border-width: 0 4px 5px 4px;
 }
-
+*/
 .select2-container--wbw_select2_theme .select2-selection--multiple {
 	background-color: white;
 	border: 1px solid #aaa;
@@ -785,7 +785,7 @@ span.select2-container--wbw_select2_theme .select2-search--inline .select2-searc
 	padding-right: 5px;
 	position: relative;
 }
-*/
+
 .select2-container--wbw_select2_theme .select2-selection--multiple.select2-selection--clearable {
 	padding-right: 25px;
 }
