--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -496,6 +496,17 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
   border-color: transparent transparent #888 transparent;
   border-width: 0 4px 5px 4px;
 }
+
+.select2-container--wbw_select2_theme .select2-selection--multiple {
+	background-color: white;
+	border: 1px solid #aaa;
+	border-radius: 4px;
+	cursor: text;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	position: relative;
+}
+
 /*
 span.select2-container--wbw_select2_theme .select2-selection--multiple {
   background-color: #fff;
@@ -512,6 +523,8 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple {
 
 
 }
+*/
+
 /*
 span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
   padding-top: 0rem;
