--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -507,6 +507,10 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 	position: relative;
 }
 
+.select2-container--wbw_select2_theme .select2-selection--multiple ul {
+  margin: 0;
+}
+
 .select2-container--wbw_select2_theme .select2-selection--multiple.select2-selection--clearable {
 	padding-right: 25px;
 }
