--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -509,6 +509,7 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 
 .select2-container--wbw_select2_theme .select2-selection--multiple ul {
   margin: 0;
+  padding-left: 0.5rem;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--multiple.select2-selection--clearable {
