--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -502,7 +502,8 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 	border: 1px solid #aaa;
 	border-radius: 4px;
 	cursor: text;
-	padding-bottom: 5px;
+	/* padding-bottom: 5px; */
+  padding-bottom: .3rem
 	padding-right: 5px;
 	position: relative;
 }
