--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -635,6 +635,10 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 	-webkit-appearance: textfield;
 }
 
+.select2-container--wbw_select2_theme .select2-search--inline textarea.select2-search__field {
+  padding-bottom: .5rem
+}
+
 .select2-container--wbw_select2_theme .select2-results > .select2-results__options {
 	max-height: 200px;
 	overflow-y: auto;
