--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -636,7 +636,8 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 }
 
 .select2-container--wbw_select2_theme .select2-search--inline textarea.select2-search__field {
-  padding-bottom: .5rem
+  padding-bottom: .5rem;
+  line-height: 1;
 }
 
 .select2-container--wbw_select2_theme .select2-results > .select2-results__options {
