--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -637,6 +637,7 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 
 .select2-container--wbw_select2_theme .select2-search--inline textarea.select2-search__field {
   padding-bottom: .5rem;
+  padding-top: .3rem;
   line-height: 1;
   height: 1.6rem;
 }
