--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -562,8 +562,7 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 	cursor: pointer;
 	font-size: 1em;
 	font-weight: bold;
-	padding-top: 0px; 
-  padding-right: 4px;
+	padding: 0 4px;
 	position: absolute;
 	left: 0;
 	top: 0;
