--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -444,7 +444,8 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
   cursor: pointer;
   float: right;
   font-weight: bold;
-  height: 26px;
+  /* height: 26px; */
+  height: 3rem;
   margin-right: 20px;
   padding-right: 0px;
 }
